--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
-.App {
+.huy{
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.cont1{
+  margin-top: 30px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.redcol{
+  background-color: #01CBC6;
+}
+.iconscard{
   color: white;
+  font-size: 100px;
 }
-
-.App-link {
-  color: #61dafb;
+.sjp{
+  color: white;
+  font-size: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sjp2{
+  color: white;
+  font-size: 30px;
+  padding-left: 55%;
+}
+.hj{
+  background-color:#EAF0F1;
+  border-radius: 20px;
+  opacity: 0.7;
+}
+.day{
+  margin-top: 0px;
+  margin:0px;
 }
